build: зависимости мостов голограмм (FancyHolograms, DecentHolograms)
Координаты и репозитории взяты из pom QweProtectStones: DecentHolograms
публикуется через JitPack, FancyHolograms — в репозитории Fancy
Innovations. Обе зависимости — provided: плагины ставит администратор,
в наш jar они не попадают, а если их нет, работают встроенные
голограммы на TextDisplay.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>